--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
+    "html2canvas-pro": "^1.5.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -18,6 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-slick": "^0.30.3",
+    "react-to-pdf": "^2.0.1",
+    "react-to-print": "^3.1.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
