--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
+    "html-react-parser": "^5.2.5",
     "html2canvas-pro": "^1.5.0",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
