--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.1",
     "call-bound": "^1.0.3",
+    "canvas": "^3.1.2",
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
     "content-disposition": "^0.5.4",
@@ -49,6 +50,8 @@
     "has-flag": "^3.0.0",
     "has-symbols": "^1.1.0",
     "hasown": "^2.0.2",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.4.24",
     "ignore-by-default": "^1.0.1",
@@ -58,6 +61,7 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "kareem": "^2.6.3",
     "math-intrinsics": "^1.1.0",
@@ -85,6 +89,7 @@
     "proxy-addr": "^2.0.7",
     "pstree.remy": "^1.1.8",
     "punycode": "^2.3.1",
+    "puppeteer": "^24.11.2",
     "qs": "^6.13.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
